# omm2caom2

./: Dockerfile  README.md  config.yml  docker-entrypoint.sh  omm.py  omm_run.py  setup.cfg  setup.py
int_test/: todo.txt.test_set
omm2caom2/: __init__.py  astro_composable.py  cleanup_augmentation.py  composable.py  fits2caom2_augmentation.py  footprint_augmentation.py  footprintfinder.py  main_app.py  manage_composable.py  omm2caom2.py  omm_add_checksum_prefix.py  omm_composable.py  omm_docker_run_cleanup.py  omm_footprint_augmentation.py  omm_preview_augmentation.py  preview_augmentation.py
omm2caom2/tests/: conftest.py  run_compare.sh  test_astro_composable.py  test_caom_gen_visit.py  test_compare_obs.py  test_composable.py  test_main_app.py  test_manage_composable.py  test_omm2caom2.py  test_omm2caom2_components.py  test_omm2caom2_errors.py  test_omm_composable.py  test_omm_name.py  test_omm_visitors.py
omm2caom2/tests/data/: C071112_0001_CAL.expected.xml  C071112_0001_CAL.fits.header  C071112_0001_CAL.fits.xml  C071114_0464_REJECT.expected.xml  C071114_0464_REJECT.fits.header  C071128_0740_FOCUS.expected.xml  C071128_0740_FOCUS.fits.header  C071128_0740_FOCUS.fits.xml  C071202_0756_SCI.expected.xml  C071202_0756_SCI.fits.header  C080415_domeflat_BrGamma_CALRED.expected.xml  C080415_domeflat_BrGamma_CALRED.fits.header  C090219_0001_start.xml  C090620_0003_SCI.expected.xml  C090620_0003_SCI.fits.header  C090620_0003_SCI.fits.xml  (+71 more)
scripts/: config.yml  my_reductions_docker_1.py  my_run_docker_4.py  omm_run.sh
tests/: mk_int_test.sh  run_int_test.sh
(+2 files in other folders)
