[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = omm2caom2

[bdist_wheel]
universal=1

[metadata]
package_name = omm2caom2
description = Application to generate OMM observations in CAOM2 format.
long_description = TBD 
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = TBD
edit_on_github = False
github_project = SharonGoliath/omm2caom2
install_requires = caom2utils
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.18

[entry_points]
omm2caom2 = omm2caom2:main_app
omm_run = omm2caom2.omm_composable:run_by_file
omm_run_single = omm2caom2.omm_composable:run_single
